# rust-learn

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: rust.yml
algorithm/: Cargo.toml
algorithm/benches/: longest_subsequence_bench.rs
algorithm/examples/: anagram.rs  anagram_valid.rs  count_good_triplets.rs  find_max_average.rs  longest_consecutive_sequence.rs  longest_substr.rs  matrix_transpose.rs  max_score.rs  max_vowels.rs  median_sorted.rs  mountain_array.rs  move_zero.rs  num_identical_pairs.rs  operation_xor.rs  palindrome.rs  shuffle.rs  tree_check.rs  two_add.rs  two_sum.rs  ugly_numb.rs  vowel_string.rs
algorithm/src/: algo_search.rs  algo_sort.rs  array.rs  array_deque.rs  array_queue.rs  array_stack.rs  avl_tree.rs  binary_search_tree.rs  fibonacci.rs  hash_table.rs  hash_table_chaining.rs  heap.rs  invalid_ip_address.rs  lib.rs  linked_list.rs  list.rs  main.rs  stack.rs  unsafe_linked_queue.rs
algorithm/tests/: algo_search_test.rs  algo_sort_test.rs  array_queue_test.rs  diet_plan_performance_test.rs  find_disappeared_numbers_test.rs  hash_table_chaining_test.rs  hash_table_test.rs  heap_test.rs  linked_list_test.rs  linked_queue_test.rs  list_test.rs  max_satisfied_test.rs  max_score_test.rs  max_sum_test.rs  maximum_subarray_sum_test.rs  min_arrivals_to_discard_test.rs  minium_recolors_test.rs  numb_of_subarrays_test.rs  phantom_type_test.rs  share_candies_test.rs  stack_diff_test.rs  stack_test.rs
bert_similarity/: .gitignore  Cargo.toml  README.md  USAGE_EXAMPLES.md  config.toml  libbert.rlib
bert_similarity/examples/: model_persistence_demo.rs  training_data_validation.rs
bert_similarity/src/: lib.rs  main.rs
bert_similarity/src/api/: finetune.rs  handlers.rs  mod.rs  models.rs  server.rs  service.rs
bert_similarity/src/core/: device.rs  mod.rs  model.rs  tokenizer.rs
bert_similarity/src/inference/: engine.rs  mod.rs  opposition.rs  semantic.rs  similarity.rs
bert_similarity/src/model/: bert.rs  bert_loading_tests.rs  mod.rs  persistence.rs  similarity.rs  tokenizer.rs
bert_similarity/src/model_management/: loader.rs  mod.rs  persistence.rs  registry.rs
bert_similarity/src/training/: mod.rs  parser.rs  trainer.rs  validation.rs
bert_similarity/src/training/loss/: cosine_embedding.rs  mod.rs
bert_similarity/src/training/optimizer/: adam.rs  mod.rs
bert_similarity/src/utils/: config.rs  error.rs  logger.rs  mod.rs
bert_similarity/tests/: finetune_api_test.rs
concurrency/: Cargo.toml
concurrency/benches/: arc_benchmark.rs
concurrency/examples/: channel.rs  dredis.rs  dummy_redis.rs  matrix.rs  metrics.rs
concurrency/src/: lib.rs  main.rs  matrix.rs  metrics.rs  vector.rs
concurrentcy/: Cargo.toml
concurrentcy/benches/: arc_benchmark.rs
concurrentcy/examples/: dummy_redis.rs  matrix.rs  metrics.rs
concurrentcy/src/: lib.rs  main.rs  matrix.rs  metrics.rs  vector.rs
crypto/: Cargo.toml
crypto/src/: main.rs  secp256k1.rs
defined-agent/: .env  Cargo.toml
defined-agent/.memory/: MEMORY.md  prefer_rust.md
defined-agent/examples/: agent_loop.rs  agent_loop_optimized.rs
defined-agent/src/: lib.rs  main.rs
defined-agent/src/context/: mod.rs  params_content.rs
defined-agent/src/hook/: mod.rs
defined-agent/src/llm/: agent_loop.rs  complete.rs  mod.rs
defined-agent/src/memory/: mod.rs
defined-agent/src/permission/: constant.rs  mod.rs  validator.rs
defined-agent/src/recovery/: mod.rs
defined-agent/src/skills/: mod.rs  skill_load.rs
defined-agent/src/structure/: act_plan.rs  loop_state.rs  mod.rs
defined-agent/src/system/: mod.rs  prompt.rs
defined-agent/src/tools/: bash.rs  compact.rs  edit_file.rs  memory.rs  mod.rs  read_file.rs  sub_agent.rs  todo.rs  write_file.rs
exercise/: Cargo.toml  rust.md
exercise/src/: lib.rs  main.rs
getinfo/: Cargo.toml
getinfo/src/: client.rs  server.rs
grep/: Cargo.toml  note.md  output.txt
grep/src/: lib.rs  main.rs
halo_web/: Cargo.toml
halo_web/src/: main.rs
httpie/: Cargo.toml
httpie/src/: main.rs
kv_server/: Cargo.toml  build.rs
kv_server/examples/: client.rs  dummy_server.rs  server.rs
kv_server/src/: abi.proto  lib.rs
kv_server/src/error/: kv.rs  mod.rs
kv_server/src/pb/: abi.rs  mod.rs
kv_server/src/service/: command_service.rs  mod.rs
kv_server/src/storage/: memory.rs  mod.rs
macro_new/: Cargo.toml
macro_new/hello_macro_derive/: Cargo.toml
macro_new/pancakes/: Cargo.toml
ml-learning/: Cargo.toml
ml-learning/src/: main.rs
process-killer-tauri/: ICON_GUIDE.md  README.md  generate-icons.bat  index.html  jest.config.js  package-lock.json  package.json
process-killer-tauri/src/: App.css  App.tsx
process-killer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
process_killer/: Cargo.toml
process_killer/assets/: style.css
process_killer/src/: lib.rs  main.rs
process_killer/tests/: test_process.rs
processer/: Cargo.toml
processer/src/: lib.rs  main.rs
processer/tests/: test_process.rs
rcli/: Cargo.toml
rcli/assets/: blake3.txt
rcli/src/: lib.rs  main.rs  utils.rs
rcli/src/operation/: base64.rs  csv.rs  genpwd.rs  mod.rs  opts.rs  text.rs
rcli/src/process/: base64.rs  csv.rs  gen_pwd.rs  mod.rs  text.rs
real_weather/: Cargo.toml
real_weather/src/: main.rs
simple-redis/: Cargo.toml
simple-redis/src/: lib.rs
simple-redis/src/objects/: linked_list.rs  list.rs  mod.rs  zip_list.rs
simple-redis/src/resp/: mod.rs
src/: lib.rs  main.rs
src/characters/: strings.rs
src/circle/: circle_reference.rs  diff_circle.rs  weak.rs  weak_example.rs
src/closure/: cacher.rs  exercise_1.rs  exercise_10.rs  exercise_10_1.rs  exercise_11.rs  exercise_2.rs  exercise_3.rs  exercise_4.rs  exercise_5.rs  exercise_6.rs  exercise_9.rs  fn_mut.rs  (+2 more)
thumbor/: Cargo.toml  build.rs  request.http
todolist/: Cargo.toml
todolist/schema/: todolist.sql
todolist/src/: lib.rs  main.rs
todolist/src/config/: connectdb.rs  dbconnector.rs
todolist/src/domain/: todo.rs
todolist/src/handler/: opts.rs
todolist/src/repository/: opts.rs
todolist/src/routers/: router.rs
(+334 files in other folders)
