[package]
name = "bert_similarity"
version = "0.1.0"
edition = "2021"

[lib]
name = "bert_similarity"
path = "src/lib.rs"

[[bin]]
name = "bert_similarity"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Machine Learning
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
csv = "1.3"
chrono = "0.4"

[dev-dependencies]
proptest = "1.4"
