[package]
name = "bert_similarity"
version = "0.1.0"
edition = "2021"

[lib]
name = "bert_similarity"
path = "src/lib.rs"

[[bin]]
name = "bert_similarity"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Machine Learning
candle-core = "0.9.0"
candle-nn = "0.9.0"
candle-transformers = "0.9.0"
tokenizers = "0.22.2"
hf-hub = "0.4.3"
safetensors = "0.7.0"
bytemuck = "1.14"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.9.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
csv = "1.3"
chrono = "0.4"
unicode-normalization = "0.1"
dirs = "6.0.0"

[dev-dependencies]
proptest = "1.4"
