[package]
name = "concurrentcy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
oneshot = "0.1.11"
rand = "0.9.1"
dashmap = "6.0.0"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
