[package]
name = "concurrentcy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
oneshot = "0.1.11"
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
rand = "0.9.1"
dashmap = "6.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
[[bench]]
name = "arc_benchmark"
harness = false