[package]
name = "defined-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
schemars ="1.2.1"
anyhow = "1.0.103"
async-openai = { version = "0.41.1", features = ["chat-completion"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
bytes = "1.11.1"
async-stream = "0.3.6"
futures = "0.3.32"
