[package]
name = "defined-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
schemars = "1.2.1"
anyhow = "1.0.103"
async-openai = { version = "0.41.1", features = ["chat-completion"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
bytes = "1.11.1"
async-stream = "0.3.6"
futures = "0.3.32"
backon = "1.6.0"
async-trait = "0.1.89"
strum = "0.28.0"
strum_macros = "0.28.0"
walkdir = "2.5.0"
inquire = "0.9.4"
regex = "1.13.1"
wildmatch = "2.6.1"
derive_builder = "0.20.2"
tera = "2.0.0"
chrono = "0.4.45"
