[package]
name = "getinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"