[package]
name = "kv_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.0"
dashmap = { version = "6.1.0", features = ["inline"] }
http = "1.2.0"
prost = "0.13.5"
thiserror = "2.0.11"
tracing = "0.1.41"


[dev-dependencies]
anyhow = "1.0.95"
async-prost = "0.4.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
tracing-subscriber = "0.3.19"


[build-dependencies]
prost-build = "0.13.5"
