[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["stanley"]

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
blake3 = "1.5.5"
clap = {version = "4.5.21", features = ["derive"]}
csv = "1.3.1"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
toml = "0.8.19"
zxcvbn = "3.1.0"
