[package]
name = "real_weather"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
rdkafka = { version = "0.37.0", features = ["tokio"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
