[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.59"
log = "0.4"
axum = "0.8.9"
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "10.4.0"
chrono = { version = "0.4", features = ["serde"] }
skiplist = "1.1.0"
geojson = "1.0.0"
rand = "0.10.1"
